traversal.snake.Snake.scala.error
Compilation error:
Snake:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:9: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:15: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:22: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else return false
                ^Snake:25: warning: enclosing method positionFinale has result type Unit: return value discarded
    else return false
         ^Snake:48: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^